--- a/client/src/components/Operations/Operations.css
+++ b/client/src/components/Operations/Operations.css
@@ -5,4 +5,11 @@
     width: 50rem;
     max-width: 95%;
    
+}
+.operation-item strong {
+    color: #3a3a3a;
+    font-size: 1rem;
+    flex: 1;
+    margin: 0 1rem;
+    color: white;
   }
