--- a/client/src/components/Operations/OperationDate.css
+++ b/client/src/components/Operations/OperationDate.css
@@ -1,15 +1,15 @@
 .operation-date {
     display: flex;
     flex-direction: column;
-    width: 5.5rem;
-    height: 5.5rem;
+    width: 4.5rem;
+    height: 4.5rem;
     border: 1px solid #ececec;
     background-color: #2a2a2a;
     color: white;
     border-radius: 12px;
     align-items: center;
     justify-content: center;
-  }
+}
   
   .operation-date__month {
     font-size: 0.75rem;
@@ -23,4 +23,20 @@
   .operation-date__day {
     font-size: 1.5rem;
     font-weight: bold;
+  }
+
+  
+  @media (min-width: 580px) {
+    .operation-date {
+    display: flex;
+    flex-direction: column;
+    width: 5.5rem;
+    height: 5.5rem;
+    border: 1px solid #ececec;
+    background-color: #2a2a2a;
+    color: white;
+    border-radius: 12px;
+    align-items: center;
+    justify-content: center;
+  }
   }
